--- a/style.css
+++ b/style.css
@@ -290,10 +290,12 @@ h2 {
 
 /* footer started */
 footer {
-  height: 2.5vh;
-  text-align: center;
-  background-color: #2f4858;
-  margin-top: 55px;
+  height: 5vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #65baef;
+  margin-top: 30px;
 }
 input,
 textarea {
