--- a/stylecaffee.css
+++ b/stylecaffee.css
@@ -14,6 +14,7 @@ body {
 .container {
   position: relative;
   top: -50px;
+  left: 0;
 }
 .cup {
   position: relative;
@@ -139,14 +140,14 @@ body {
 .aboutme {
   position: absolute;
   top: 80%;
-  left: 500px;
+  left: 28%;
 }
 .aboutme h1 {
   position: absolute;
   top: -130px;
   color: #fff;
-  font-size: 6rem;
-  left: 110px;
+  font-size: 4rem;
+  left: 140px;
 }
 form, input {
   text-align: center;
@@ -154,7 +155,7 @@ form, input {
 footer {
   position: relative;
   top: 750px;
-  left: -290px;
+  left: -14%;
   padding-top: 50px;
   
 
@@ -165,10 +166,31 @@ footer button {
   color: #dcdcdc;
   font-size: 1.5rem;
   border-radius: 15px;
-  
-width: 12vw;
+  top: 80%;
+width: 100%;
+
 
 }
 footer a {
   text-decoration: none;
+}
+@media (max-width:900px) {
+  .container {
+    position: absolute;
+    top: 25%;
+    left: 15%;
+  }
+  .aboutme {
+    position: absolute;
+    left: 15%;
+  }
+  .aboutme h1 {
+    font-size: 2rem;
+    top: -25%;
+    left: 15%;
+  }
+  footer {
+    left: -20%;
+    width: 100%;
+  }
 }
