--- a/style.css
+++ b/style.css
@@ -89,6 +89,7 @@ h2 {
 @media (max-width: 700px) {
   .menu-button-container {
     display: flex;
+    
   }
   .menu {
     position: absolute;
@@ -99,8 +100,15 @@ h2 {
     width: 100%;
     justify-content: center;
     align-items: center;
+   
+  }
+  li a {
+    color: white;
+    opacity: 1;
+    text-decoration: none;
   }
   #menu-toggle ~ .menu li {
+    
     height: 0;
     margin: 0;
     padding: 0;
@@ -124,6 +132,7 @@ h2 {
   }
   .menu > li:not(:last-child) {
     border-bottom: 1px solid #444;
+    
   }
 }
 
