--- a/light-style.css
+++ b/light-style.css
@@ -147,6 +147,9 @@ p {
 }
 .backtomain a {
   text-decoration: none;
+  position: relative;
+  left: -20px;
+  height: 15px;
   color: #000;
   border: 1px solid black;
 }
