--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ header {
   position: relative;
 }
 /* navbar mediaquery  statrded*/
+
 h2 {
   vertical-align: center;
   text-align: center;
@@ -23,6 +24,11 @@ h2 {
   color: #fff;
   height: 50px;
   padding: 1em;
+  position: fixed;
+  width: 100vw;
+  z-index: 2;
+
+  
 }
 
 .menu {
@@ -31,10 +37,12 @@ h2 {
   list-style-type: none;
   margin: 0;
   padding: 0;
+  z-index: 2;
 }
 .menu > li {
   margin: 0 1rem;
   overflow: hidden;
+  
 }
 .menu-button-container {
   display: none;
@@ -48,6 +56,7 @@ h2 {
 
 #menu-toggle {
   display: none;
+  position: fixed;
 }
 
 .menu-button,
@@ -85,7 +94,12 @@ h2 {
   margin-top: 0px;
   transform: rotate(-405deg);
 }
-
+li a {
+  color: white;
+  opacity: 1;
+  text-decoration: none;
+  
+}
 @media (max-width: 700px) {
   .menu-button-container {
     display: flex;
@@ -224,11 +238,11 @@ h2 {
   background-color: rgb(225, 98, 98);
   text-align: center;
   width: 100%;
-  height: 63vh;
+  height: 55vh;
   display: grid;
   /* grid-template-columns: 635px 635px 635px ; */
   grid-template-columns: 33.33% 33.33% 33.33%;
-  grid-template-rows: 15% 85%;
+  grid-template-rows: 20% 80%;
   grid-template-areas:
     "header header header"
     "right middle left";
@@ -339,7 +353,7 @@ textarea {
 }
 
 /* animation, i'm coming as soon as section */
-.container {
+/* .container {
   position: relative;
   top: 150px;
   width: 100%;
@@ -433,10 +447,10 @@ textarea {
   border-radius: 50%;
   box-shadow: 0 0 0 5px #e41cf833, 0 0 0 10px #e41cf822, 0 0 0 20px #e41cf811,
     0 0 20px #e41cf8, 0 0 50px #e41cf8;
-}
+} */
 
 /* coffee section */
-.container {
+/* .container {
   position: relative;
   top: 233px;
 }
@@ -559,7 +573,7 @@ textarea {
   100% {
     transform: translateY(-300px) scaleX(10);
   }
-}
+} */
 
 .aboutme {
   position: relative;
@@ -587,3 +601,153 @@ textarea {
   width: 3rem;
   height: 3rem;
 }
+
+/* iframe section and class container2 */
+.container2 {
+  background-color: rgb(211, 43, 43);
+  width: 100%;
+  height: 25vh;
+  display: flex;
+  
+  /* display: grid;
+  gap: 25px;
+  grid-template-columns: 600px 600px 600px;
+  grid-template-rows: 300px 300px 300px;
+  grid-template-areas:
+    "header headerone headertwo"
+    "right middle left"; */
+}
+
+.iframe-preview {
+  transition:.2s ease-in-out opacity, .2s ease-in-out transform;
+  opacity:0;
+  position:absolute;
+  bottom: 110%;
+  left:50%;
+  box-shadow:0 1px 5px rgba(0,0,0,.5);
+  width:230px;
+  padding-right: 30px;
+  height:160px;
+  border:4px solid #fff;
+  overflow-x:hidden;
+  overflow-y:auto;
+  transform-origin:center bottom;
+  transform: translateX(-50%) translateY(10px) scale(.9);
+  
+}
+iframe {
+  transform:scale(.2);
+  transform-origin:0 0;
+}
+
+.text {
+  cursor:default;
+  display:inline-block;
+  position:relative;
+  border:2px solid #ddd;
+  padding:5px;
+  border-radius:3px;
+  font-size:12px;
+  width: 100px;
+
+  }
+.text:hover .iframe-preview {
+  opacity:1;
+  transform: translateX(-50%) translateY(0) scale(1);
+}
+.text:hover {
+  box-shadow: 0 1px 5px rgba(0,0,0,.1);
+  border-color: #333;
+}
+
+
+ .iframebox1{
+  margin-top: 25px;
+  grid-area: header;
+  width: 500px;
+  height: 300px;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+ 
+
+
+
+
+.iframebox2{
+  margin-top: 25px;
+  grid-area: headerone;
+  width: 500px;
+  height: 300px;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+} 
+.iframebox3{
+  margin-top: 25px;
+  grid-area: headertwo;
+  width: 500px;
+  height: 300px;
+  display: flex;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+}
+.iframebox4{
+  margin-top: 25px;
+  grid-area: right;
+  width: 500px;
+  height: 300px;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 25px;
+}
+.iframebox5{
+  grid-area: middle;
+  width: 500px;
+  height: 300px;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 25px;
+}
+.iframebox6{
+  margin-top: 25px;
+  grid-area: left;
+  width: 500px;
+  height: 300px;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+} 
+
+
+
+
+/* .Curriculum-vitae {
+  background-color: rgb(225, 98, 98);
+  text-align: center;
+  width: 100%;
+  height: 63vh;
+  display: grid;
+  grid-template-columns: 33.33% 33.33% 33.33%;
+  grid-template-rows: 15% 85%;
+  grid-template-areas:
+    "header header header"
+    "right middle left";
+}
+.items1 {
+  grid-area: header;
+  background-color: #755990;
+  border: 2px solid black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+} */
