--- a/style.css
+++ b/style.css
@@ -3,6 +3,10 @@
   padding: 0;
   box-sizing: border-box;
 }
+body {
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  overflow-x: hidden;
+}
 
 header {
   position: relative;
@@ -27,8 +31,6 @@ h2 {
   position: fixed;
   width: 100vw;
   z-index: 2;
-
-  
 }
 
 .menu {
@@ -42,7 +44,6 @@ h2 {
 .menu > li {
   margin: 0 1rem;
   overflow: hidden;
-  
 }
 .menu-button-container {
   display: none;
@@ -98,12 +99,10 @@ li a {
   color: white;
   opacity: 1;
   text-decoration: none;
-  
 }
 @media (max-width: 700px) {
   .menu-button-container {
     display: flex;
-    
   }
   .menu {
     position: absolute;
@@ -114,7 +113,6 @@ li a {
     width: 100%;
     justify-content: center;
     align-items: center;
-   
   }
   li a {
     color: white;
@@ -122,7 +120,6 @@ li a {
     text-decoration: none;
   }
   #menu-toggle ~ .menu li {
-    
     height: 0;
     margin: 0;
     padding: 0;
@@ -146,7 +143,6 @@ li a {
   }
   .menu > li:not(:last-child) {
     border-bottom: 1px solid #444;
-    
   }
 }
 
@@ -167,9 +163,17 @@ li a {
   opacity: 0.4;
 }
 
+.header-pic::before {
+  content: "";
+  background-color: rgba(65, 70, 75, 0.6);
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
 .text-header {
   margin-top: 10%;
-  /* color: rgb(15, 47, 87); */
   color: #df5871;
   font-size: 5rem;
   position: absolute;
@@ -209,11 +213,29 @@ li a {
   text-align: center;
   background-color: #b0568d;
 }
+.tittle-middle-page {
+  color: #fff;
+  font-size: 2rem;
+}
 .button-middle-page {
-  background-color: #5062bf;
-  color: #222;
-  width: 100px;
-  height: 25px;
+  background-color: #755990;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+  border-radius: 15px;
+  
+}
+.button-middle-page a {
+  text-decoration: none;
+  color: #fff;
+  font-size: 1.5rem;
+  font-weight: bold;
 }
 .social-media {
   display: flex;
@@ -235,13 +257,16 @@ li a {
 /* curriculum vitae section */
 
 .Curriculum-vitae {
-  background-color: rgb(225, 98, 98);
+  /* background-color: rgb(225, 98, 98); */
   text-align: center;
+  justify-content: center;
   width: 100%;
-  height: 55vh;
+  height: 53vh;
   display: grid;
-  /* grid-template-columns: 635px 635px 635px ; */
-  grid-template-columns: 33.33% 33.33% 33.33%;
+  gap: 5px;
+  margin: 10px 35px 20px 35px;
+  
+  grid-template-columns: 33% 33% 33%;
   grid-template-rows: 20% 80%;
   grid-template-areas:
     "header header header"
@@ -249,6 +274,7 @@ li a {
 }
 .items1 {
   grid-area: header;
+  
   background-color: #755990;
   border: 2px solid black;
   display: flex;
@@ -259,27 +285,32 @@ li a {
   font-size: 3rem;
   color: #fff;
   text-decoration: none;
-
 }
 .items2 {
+  overflow: scroll;
+  background-color: #fff;
   grid-area: right;
   border: 2px solid black;
+  padding: 20px;
 }
 .items3 {
+  padding: 20px;
+  overflow: scroll;
+  background-color: #fff;
   grid-area: middle;
   border: 2px solid black;
 }
 .items4 {
+  padding: 20px;
+  overflow: scroll;
+  background-color: #fff;
   grid-area: left;
   border: 2px solid black;
 }
-/* .items5 {
-  border: 2px solid black;
-}
-.items6 {
-  border: 2px solid black;
-} */
+
+/* download section  */
 .download {
+  position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -287,6 +318,7 @@ li a {
   flex-direction: column;
   padding: 50px;
 }
+
 .download a {
   margin-top: 20px;
   text-decoration: none;
@@ -294,12 +326,16 @@ li a {
 .items7 {
   text-align: center;
 }
+
+/* download section is ended */
+
 /* media query section */
 
 @media (max-width: 900px) {
   .Curriculum-vitae {
     display: flex;
     flex-direction: column;
+    height: 110vh;
   }
   .text-header {
     font-size: 2.5rem;
@@ -314,283 +350,113 @@ li a {
   .items4,
   .items5,
   .items6 {
-    height: 100%;
+    height: 100vh;
   }
   .media-link {
     display: flex;
     flex-direction: column;
   }
-  .social-tittle{
+  .social-tittle {
     text-align: center;
   }
-  footer {}
+  footer {
+    top: 100px;
+  }
+  .container2 {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    z-index: 2;
+  }
+  .container2 h1 {
+    margin-top: -160px;
+  }
+  .container2 div {
+    margin-left: -100px;
+  }
 }
 
-/* category section is ended */
+/* media query section ended*/
 
-/* form section is started */
-.form-section {
-  text-align: center;
-}
-
-/* footer started */
-footer {
-  width: 100vw;
-  height: 5vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: #65baef;
-  margin-top: 30px;
-}
-input,
-textarea {
-  border: 1px solid #f46b45;
-}
-.submit {
-  background-color: rgb(247, 153, 128);
-  border-radius: 25px;
-}
-
-/* animation, i'm coming as soon as section */
-/* .container {
-  position: relative;
-  top: 150px;
+/* portfolio, iframe section and class container2 started */
+.container2 {
+  background-color: #A057B4;
   width: 100%;
+  height: 25vh;
   display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.container .ring {
-  position: relative;
-  margin: -30px;
-  width: 150px;
-  height: 150px;
-  border: 4px solid transparent;
-  border-radius: 50%;
-  border-top: 4px solid #24ecff;
-  animation: animation 4s linear infinite;
-}
-.container .ring::before {
-  content: "";
-  position: absolute;
-  width: 15px;
-  height: 15px;
-  background: #24ecff;
-  top: 12px;
-  right: 12px;
-  border-radius: 50%;
-  box-shadow: 0 0 0 5px #24ecff33, 0 0 0 10px #24ecff22, 0 0 0 20px #24ecff11,
-    0 0 20px #24ecff, 0 0 50px #24ecff;
 }
 
-.container .ring:nth-child(3) {
-  position: absolute;
-  top: -66.66px;
-  animation: animation2 4s linear infinite;
-  animation-delay: -3s;
-  border-top: 4px solid transparent;
-  border-left: 4px solid #e41cf8;
-}
-.container p {
-  position: absolute;
-  color: #fff;
-  font-size: 3rem;
-  top: 290px;
-  letter-spacing: 0.15em;
-}
-@keyframes animation {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(360deg);
-  }
-}
-
-.container .ring:nth-child(2) {
-  animation: animation2 4s linear infinite;
-  animation-delay: -1s;
-  border-top: 4px solid transparent;
-  border-left: 4px solid #93ff2d;
-}
-@keyframes animation2 {
-  0% {
-    transform: rotate(360deg);
-  }
-  100% {
-    transform: rotate(0deg);
-  }
-}
-.container .ring:nth-child(2)::before {
-  content: "";
-  top: initial;
-  position: absolute;
-  width: 15px;
-  height: 15px;
-  background: #93ff2d;
-  bottom: 12px;
-  left: 12px;
-  border-radius: 50%;
-  box-shadow: 0 0 0 5px #93ff2d33, 0 0 0 10px #93ff2d22, 0 0 0 20px #93ff2d11,
-    0 0 20px #93ff2d, 0 0 50px #93ff2d;
-}
-.container .ring:nth-child(3)::before {
-  content: "";
-  top: initial;
-  position: absolute;
-  width: 15px;
-  height: 15px;
-  background: #e41cf8;
-  bottom: 12px;
-  left: 12px;
-  border-radius: 50%;
-  box-shadow: 0 0 0 5px #e41cf833, 0 0 0 10px #e41cf822, 0 0 0 20px #e41cf811,
-    0 0 20px #e41cf8, 0 0 50px #e41cf8;
-} */
-
-/* coffee section */
-/* .container {
-  position: relative;
-  top: 233px;
-}
-.cup {
-  position: relative;
-  width: 280px;
-  height: 300px;
-  background: linear-gradient(to right, #f9f9f9, #d9d9d9);
-  border-bottom-left-radius: 45%;
-  border-bottom-right-radius: 45%;
-}
-.top {
-  position: absolute;
-  top: -30px;
-  left: 0;
-  width: 100%;
-  height: 60px;
-  background: linear-gradient(to right, #f9f9f9, #d9d9d9);
-  border-radius: 50%;
-}
-.circle {
-  position: absolute;
-  top: 5px;
-  left: 10px;
-  width: calc(100% - 20px);
-  height: 50px;
-  background: linear-gradient(to left, #f9f9f9, #d9d9d9);
-  border-radius: 50%;
-  box-sizing: border-box;
-  overflow: hidden;
-}
-
-.tea {
-  position: absolute;
-  top: 20px;
-  left: 0;
-  width: 100%;
-  height: 100px;
-  border-radius: 50%;
-  background: linear-gradient(rgb(197, 126, 101), #e28462);
-}
-.handle {
-  position: absolute;
-  right: -70px;
-  top: 40px;
-  width: 160px;
-  height: 180px;
-  border: 25px solid #dcdcdc;
-  border-left: 25px solid transparent;
-  border-bottom: 25px solid transparent;
-  border-radius: 50%;
-  transform: rotate(42deg);
-}
-
-.plate {
-  position: absolute;
-  bottom: -50px;
-  left: 95px;
-  transform: translateX(-50px);
-  width: 30vw;
-  height: 26vh;
-  background: linear-gradient(to right, #f9f9f9, #e7e7e7);
-  border-radius: 50%;
-  box-shadow: 0 35px 35px rgba(0, 0, 0, 0.2);
-}
-.plate::before {
-  content: "";
-  position: absolute;
-  top: 10px;
-  left: 10px;
-  right: 10px;
-  bottom: 10px;
-  border-radius: 50%;
-  background: linear-gradient(to left, #f9f9f9, #e7e7e7);
-}
-.plate::after {
-  content: "";
-  position: absolute;
-  top: 30px;
-  left: 30px;
-  right: 30px;
-  bottom: 30px;
-  background: radial-gradient(rgba(0, 0, 0, 0.2) 25%, transparent, transparent);
-  border-radius: 50%;
-}
-.vapour {
-  position: relative;
-  display: flex;
-  z-index: 1;
-  padding: 0 20px;
-}
-.vapour span {
-  position: relative;
-  bottom: 50px;
-  display: block;
-  margin: 0 2px 50px;
-  min-width: 8px;
-  height: 120px;
-  background: #fff;
-  border-radius: 50%;
-  animation: animate 5s linear infinite;
+.iframe-preview {
+  transition: 0.2s ease-in-out opacity, 0.2s ease-in-out transform;
   opacity: 0;
-  filter: blur(8px);
-  animation-delay: calc(var(--i) * -0.5s);
+  position: absolute;
+  bottom: 110%;
+  left: 50%;
+  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.5);
+  width: 230px;
+  padding-right: 30px;
+  height: 160px;
+  border: 4px solid #fff;
+  overflow-x: hidden;
+  overflow-y: auto;
+  transform-origin: center bottom;
+  transform: translateX(-50%) translateY(10px) scale(0.9);
 }
-@keyframes animate {
-  0% {
-    transform: translateY(0) scaleX(1);
-    opacity: 0;
-  }
-  15% {
-    opacity: 1;
-  }
-  50% {
-    transform: translateY(-150px) scaleX(5);
-  }
-  95% {
-    opacity: 0;
-  }
-  100% {
-    transform: translateY(-300px) scaleX(10);
-  }
-} */
+iframe {
+  transform: scale(0.2);
+  transform-origin: 0 0;
+  
+}
 
-.aboutme {
+.text {
+  cursor: default;
+  display: inline-block;
   position: relative;
-  top: 40%;
+  border: 2px solid #ddd;
+  padding: 5px;
+  border-radius: 3px;
+  font-size: 12px;
+  width: 100px;
+  background-color:#755990;
 }
-.aboutme h1 {
-  color: #fff;
-  font-size: 3rem;
-  top: 200px;
-  z-index: 1;
+.text:hover .iframe-preview {
+  opacity: 1;
+  transform: translateX(-50%) translateY(0) scale(1);
+}
+.text:hover {
+  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.1);
+  border-color: #333;
 }
 
+.iframebox1,
+.iframebox2,
+.iframebox3,
+.iframebox4,
+.iframebox5,
+.iframebox6 {
+  margin-top: 25px;
+    width: 500px;
+  height: 300px;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.container2 span a {
+  text-decoration: none;
+  color: #fff;
+}
+
+
+/* portfolio, iframe section and class container2 ended */
+
+/* scroll section  started */
 .scroll-up {
   position: fixed;
   right: 0.5%;
   bottom: 3%;
- 
   cursor: pointer;
 }
 .socicon {
@@ -602,152 +468,16 @@ textarea {
   height: 3rem;
 }
 
-/* iframe section and class container2 */
-.container2 {
-  background-color: rgb(211, 43, 43);
-  width: 100%;
-  height: 25vh;
-  display: flex;
-  
-  /* display: grid;
-  gap: 25px;
-  grid-template-columns: 600px 600px 600px;
-  grid-template-rows: 300px 300px 300px;
-  grid-template-areas:
-    "header headerone headertwo"
-    "right middle left"; */
-}
+/* scroll section  ended */
 
-.iframe-preview {
-  transition:.2s ease-in-out opacity, .2s ease-in-out transform;
-  opacity:0;
-  position:absolute;
-  bottom: 110%;
-  left:50%;
-  box-shadow:0 1px 5px rgba(0,0,0,.5);
-  width:230px;
-  padding-right: 30px;
-  height:160px;
-  border:4px solid #fff;
-  overflow-x:hidden;
-  overflow-y:auto;
-  transform-origin:center bottom;
-  transform: translateX(-50%) translateY(10px) scale(.9);
-  
-}
-iframe {
-  transform:scale(.2);
-  transform-origin:0 0;
-}
-
-.text {
-  cursor:default;
-  display:inline-block;
-  position:relative;
-  border:2px solid #ddd;
-  padding:5px;
-  border-radius:3px;
-  font-size:12px;
-  width: 100px;
-
-  }
-.text:hover .iframe-preview {
-  opacity:1;
-  transform: translateX(-50%) translateY(0) scale(1);
-}
-.text:hover {
-  box-shadow: 0 1px 5px rgba(0,0,0,.1);
-  border-color: #333;
-}
-
-
- .iframebox1{
-  margin-top: 25px;
-  grid-area: header;
-  width: 500px;
-  height: 300px;
-  text-align: center;
+/* footer started */
+footer {
+  width: 100vw;
+  height: 5vh;
   display: flex;
   justify-content: center;
   align-items: center;
+  background-color: #65baef;
+  margin-top: 30px;
 }
- 
-
-
-
-
-.iframebox2{
-  margin-top: 25px;
-  grid-area: headerone;
-  width: 500px;
-  height: 300px;
-  text-align: center;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-} 
-.iframebox3{
-  margin-top: 25px;
-  grid-area: headertwo;
-  width: 500px;
-  height: 300px;
-  display: flex;
-  text-align: center;
-  justify-content: center;
-  align-items: center;
-}
-.iframebox4{
-  margin-top: 25px;
-  grid-area: right;
-  width: 500px;
-  height: 300px;
-  text-align: center;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-top: 25px;
-}
-.iframebox5{
-  grid-area: middle;
-  width: 500px;
-  height: 300px;
-  text-align: center;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-top: 25px;
-}
-.iframebox6{
-  margin-top: 25px;
-  grid-area: left;
-  width: 500px;
-  height: 300px;
-  text-align: center;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-} 
-
-
-
-
-/* .Curriculum-vitae {
-  background-color: rgb(225, 98, 98);
-  text-align: center;
-  width: 100%;
-  height: 63vh;
-  display: grid;
-  grid-template-columns: 33.33% 33.33% 33.33%;
-  grid-template-rows: 15% 85%;
-  grid-template-areas:
-    "header header header"
-    "right middle left";
-}
-.items1 {
-  grid-area: header;
-  background-color: #755990;
-  border: 2px solid black;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-} */
+/* footer section is ended */
