--- a/src/light-style.css
+++ b/src/light-style.css
@@ -1,4 +1,314 @@
-*,
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+body {
+  /* min-height: 50vh; */
+  background: #0c192c;
+}
+
+
+
+
+h2 {
+  vertical-align: center;
+  text-align: center;
+}
+.top-nav {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
+  background-color: #18657c;
+  background: linear-gradient(to left, #20216d, #121c41);
+  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  color: #fff;
+  height: 50px;
+  padding: 1em;
+  position: fixed;
+  width: 100vw;
+  z-index: 2;
+}
+
+.menu {
+  display: flex;
+  flex-direction: row;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  z-index: 2;
+}
+.menu > li {
+  margin: 0 1rem;
+  overflow: hidden;
+}
+.menu-button-container {
+  display: none;
+  height: 100%;
+  width: 30px;
+  cursor: pointer;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+#menu-toggle {
+  display: none;
+  position: fixed;
+}
+
+.menu-button,
+.menu-button::before,
+.menu-button::after {
+  display: block;
+  background-color: #fff;
+  position: absolute;
+  height: 4px;
+  width: 30px;
+  transition: transform 400ms cubic-bezier(0.23, 1, 0.32, 1);
+  border-radius: 2px;
+}
+
+.menu-button::before {
+  content: "";
+  margin-top: -8px;
+}
+
+.menu-button::after {
+  content: "";
+  margin-top: 8px;
+}
+
+#menu-toggle:checked + .menu-button-container .menu-button::before {
+  margin-top: 0px;
+  transform: rotate(405deg);
+}
+
+#menu-toggle:checked + .menu-button-container .menu-button {
+  background: rgba(255, 255, 255, 0);
+}
+
+#menu-toggle:checked + .menu-button-container .menu-button::after {
+  margin-top: 0px;
+  transform: rotate(-405deg);
+}
+li a {
+  color: white;
+  opacity: 1;
+  text-decoration: none;
+}
+@media (max-width: 700px) {
+  .menu-button-container {
+    display: flex;
+  }
+  .menu {
+    position: absolute;
+    top: 0;
+    margin-top: 50px;
+    left: 0;
+    flex-direction: column;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+  }
+  li a {
+    color: white;
+    opacity: 1;
+    text-decoration: none;
+  }
+  #menu-toggle ~ .menu li {
+    height: 0;
+    margin: 0;
+    padding: 0;
+    border: 0;
+    transition: height 400ms cubic-bezier(0.23, 1, 0.32, 1);
+  }
+  #menu-toggle:checked ~ .menu li {
+    border: 1px solid #333;
+    height: 2.5em;
+    padding: 0.5em;
+    transition: height 400ms cubic-bezier(0.23, 1, 0.32, 1);
+  }
+  .menu > li {
+    display: flex;
+    justify-content: center;
+    margin: 0;
+    padding: 0.5em 0;
+    width: 100%;
+    color: white;
+    background-color: #222;
+  }
+  .menu > li:not(:last-child) {
+    border-bottom: 1px solid #444;
+  }
+}
+
+/* rain section  */
+
+.container5 {
+  position: relative;
+  width: 100%;
+  height: 90vh;
+  overflow: hidden;
+}
+.bubble {
+  position: relative;
+  display: flex;
+}
+
+/* .container5 p
+ {
+  color: #fff;
+  font-size: 6rem;
+  display: flex;
+  margin-top: 10%;
+  align-items: center;
+  justify-content: center;
+}
+.container5 span {
+    color: #fff;
+    font-size: 1rem;
+    display: flex;
+    margin-top: 2%;
+    align-items: center;
+    justify-content: center;
+} */
+
+.bubble span {
+  position: relative;
+  height: 30px;
+  width: 30px;
+  background: #01494a;
+  margin: 0 4px;
+  border-radius: 50%;
+  box-shadow: 0 0 0 10px #4fc3dc44, 0 0 50px #01494a, 0 0 100px #01494a;
+  animation: animate 2s linear infinite;
+  animation-duration: calc(80s / var(--i));
+}
+.bubble span:nth-child(even) {
+  background: #71062c;
+  box-shadow: 0 0 0 10px #ff2d7544, 0 0 50px #71062c, 0 0 100px #71062c;
+}
+@keyframes animate {
+  0% {
+    transform: translateY(100vh) scale(0);
+  }
+  100% {
+    transform: translateY(-10vh) scale(1);
+  }
+}
+
+.g-container {
+  position: relative;
+  left: 10%;
+  top: 30%;
+  font-family: monospace;
+  color: rgb(255, 255, 255);
+  font-size: 4em;
+  filter: contrast(15);
+  z-index: 1;
+}
+
+.word {
+  position: absolute;
+   left: 50%;
+  transform: translate(-50%, -50%);
+  animation: switch 5s infinite ease-in-out ;
+  animation-iteration-count: 3;
+  min-width: 100%;
+  margin: auto;
+}
+
+.word:nth-child(1) {
+  animation-delay: -7s;
+  margin-top: 5%;
+}
+
+.word:nth-child(2) {
+  animation-delay: -6s;
+  margin-top: 9%;
+}
+
+.word:nth-child(3) {
+  animation-delay: -5s;
+  margin-top: 13%;
+}
+
+
+@keyframes switch {
+  0%,
+  5%,
+  100% {
+    filter: blur(0px);
+    opacity: 1;
+  }
+
+  50%,
+  80% {
+    filter: blur(180px);
+    opacity: 0;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+
+
+
+/* wave section */
+
+.css-waves {
+  position: relative;
+  width: 100%;
+  height: 15vh;
+  margin-top: -55px;
+  margin-bottom: -7px; 
+  min-height: 100px;
+  max-height: 150px;
+}
+
+/* Here we declare the SVG node that we wish to animate. */
+
+.animated-waves > use {
+  animation: infinite-waves 25s cubic-bezier(0.8, 0.8, 0.60, 0.9) infinite;
+}
+.animated-waves > use:nth-child(1) {
+  animation-delay: -2s;
+  animation-duration: 7s;
+}
+.animated-waves > use:nth-child(2) {
+  animation-delay: -3s;
+  animation-duration: 10s;
+}
+.animated-waves > use:nth-child(3) {
+  animation-delay: -4s;
+  animation-duration: 13s;
+}
+.animated-waves > use:nth-child(4) {
+  animation-delay: -5s;
+  animation-duration: 20s;
+}
+@keyframes infinite-waves {
+  0% {
+    transform: translate3d(-90px, 0, 0);
+  }
+  100% {
+    transform: translate3d(85px, 0, 0);
+  }
+}
+/* Mobile Optimization */
+@media (max-width: 768px) {
+  .css-waves {
+    height: 40px;
+    min-height: 40px;
+  }
+}
+
+
+
+/* *,
 *::after,
 *::before {
   box-sizing: border-box;
@@ -152,4 +462,4 @@ p {
   height: 15px;
   color: #000;
   border: 1px solid black;
-}
+} */
