--- a/src/light-style.css
+++ b/src/light-style.css
@@ -5,11 +5,14 @@
 }
 body {
   /* min-height: 50vh; */
+  
+  /* background: url(/asset/laptopmobiletablet.jpeg);
+  opacity: 0.4;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center; */
   background: #0c192c;
 }
-
-
-
 
 h2 {
   vertical-align: center;
@@ -146,34 +149,13 @@ li a {
 
 /* rain section  */
 
-.container5 {
-  position: relative;
-  width: 100%;
-  height: 90vh;
-  overflow: hidden;
-}
+
 .bubble {
   position: relative;
   display: flex;
 }
 
-/* .container5 p
- {
-  color: #fff;
-  font-size: 6rem;
-  display: flex;
-  margin-top: 10%;
-  align-items: center;
-  justify-content: center;
-}
-.container5 span {
-    color: #fff;
-    font-size: 1rem;
-    display: flex;
-    margin-top: 2%;
-    align-items: center;
-    justify-content: center;
-} */
+
 
 .bubble span {
   position: relative;
@@ -199,22 +181,93 @@ li a {
   }
 }
 
+.container5 {
+  /* position: relative; */
+  display: flex;
+
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  height: 90vh;
+  overflow: hidden;
+  width: 100%;
+}
+.pic-main-face {
+  background: url(/asset/tabletmobillaptop.webp);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  width: 550px;
+  height: 550px;
+  margin-left: 40%;
+  transform: rotate(-10deg);
+  /* margin-top: 20%;
+  margin-left: 20%; */
+  z-index: -1;
+}
 .g-container {
   position: relative;
-  left: 10%;
-  top: 30%;
+  margin-left: 20%;
+  top: 0%;
   font-family: monospace;
   color: rgb(255, 255, 255);
   font-size: 4em;
   filter: contrast(15);
   z-index: 1;
+  width: 20%;
+  height: 30%;
+   display: flex;
+  flex-direction: column;
+  
 }
 
-.word {
+.item-1, 
+.item-2, 
+.item-3 {
+	position: absolute;
+  display: block;
+	top: 5em;
+  width: 60%;
+  font-size: 2em;
+color: #fff;
+	animation-duration: 20s;
+	animation-timing-function: ease-in-out;
+	animation-iteration-count: infinite;
+}
+
+.item-1{
+	animation-name: anim-1;
+}
+
+.item-2{
+	animation-name: anim-2;
+}
+
+.item-3{
+	animation-name: anim-3;
+}
+
+@keyframes anim-1 {
+	0%, 8.3% { left: -100%; opacity: 0; }
+  8.3%,25% { left: 25%; opacity: 1; }
+  33.33%, 100% { left: 110%; opacity: 0; }
+}
+
+@keyframes anim-2 {
+	0%, 33.33% { left: -100%; opacity: 0; }
+  41.63%, 58.29% { left: 25%; opacity: 1; }
+  66.66%, 100% { left: 110%; opacity: 0; }
+}
+
+@keyframes anim-3 {
+	0%, 66.66% { left: -100%; opacity: 0; }
+  74.96%, 91.62% { left: 25%; opacity: 1; }
+  100% { left: 110%; opacity: 0; }
+}
+/* .word {
   position: absolute;
-   left: 50%;
   transform: translate(-50%, -50%);
-  animation: switch 5s infinite ease-in-out ;
+  animation: switch 5s infinite ease-in-out;
   animation-iteration-count: 3;
   min-width: 100%;
   margin: auto;
@@ -235,7 +288,6 @@ li a {
   margin-top: 13%;
 }
 
-
 @keyframes switch {
   0%,
   5%,
@@ -252,10 +304,27 @@ li a {
   100% {
     opacity: 0;
   }
+} */
+
+.social-media {
+  color: #fff;
+  /* margin-top: 20%;
+  margin-left: 85%; */
+  padding: 15px;
+  
+
+  
 }
 
-
-
+.media-link a {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin: 25px;
+  padding: 15px;
+  text-decoration: none;
+}
 
 /* wave section */
 
@@ -264,7 +333,7 @@ li a {
   width: 100%;
   height: 15vh;
   margin-top: -55px;
-  margin-bottom: -7px; 
+  margin-bottom: -7px;
   min-height: 100px;
   max-height: 150px;
 }
@@ -272,7 +341,7 @@ li a {
 /* Here we declare the SVG node that we wish to animate. */
 
 .animated-waves > use {
-  animation: infinite-waves 25s cubic-bezier(0.8, 0.8, 0.60, 0.9) infinite;
+  animation: infinite-waves 25s cubic-bezier(0.8, 0.8, 0.6, 0.9) infinite;
 }
 .animated-waves > use:nth-child(1) {
   animation-delay: -2s;
@@ -305,8 +374,6 @@ li a {
     min-height: 40px;
   }
 }
-
-
 
 /* *,
 *::after,
