--- a/src/light-style.css
+++ b/src/light-style.css
@@ -5,13 +5,14 @@
 }
 body {
   /* min-height: 50vh; */
-  
+
   /* background: url(/asset/laptopmobiletablet.jpeg);
   opacity: 0.4;
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center; */
   background: #0c192c;
+  overflow-x: hidden;
 }
 
 h2 {
@@ -149,13 +150,10 @@ li a {
 
 /* rain section  */
 
-
 .bubble {
   position: relative;
   display: flex;
 }
-
-
 
 .bubble span {
   position: relative;
@@ -193,14 +191,14 @@ li a {
   width: 100%;
 }
 .pic-main-face {
-  background: url(/asset/tabletmobillaptop.webp);
+  background: url(/asset/laptop-tablet-desktop-mobile.png);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  width: 550px;
-  height: 550px;
-  margin-left: 40%;
-  transform: rotate(-10deg);
+  width: 25rem;
+  height: 25rem;
+  margin-left: 30%;
+  opacity: 0.3;
   /* margin-top: 20%;
   margin-left: 20%; */
   z-index: -1;
@@ -216,53 +214,87 @@ li a {
   z-index: 1;
   width: 20%;
   height: 30%;
-   display: flex;
+  display: flex;
   flex-direction: column;
-  
 }
 
-.item-1, 
-.item-2, 
+.item-1,
+.item-2,
 .item-3 {
-	position: absolute;
+  position: absolute;
   display: block;
-	top: 5em;
+  top: 5em;
   width: 60%;
   font-size: 2em;
-color: #fff;
-	animation-duration: 20s;
-	animation-timing-function: ease-in-out;
-	animation-iteration-count: infinite;
+  color: #fff;
+  animation-duration: 20s;
+  animation-timing-function: ease-in-out;
+  animation-iteration-count: infinite;
 }
 
-.item-1{
-	animation-name: anim-1;
+.item-1 {
+  animation-name: anim-1;
 }
 
-.item-2{
-	animation-name: anim-2;
+.item-2 {
+  animation-name: anim-2;
 }
 
-.item-3{
-	animation-name: anim-3;
+.item-3 {
+  animation-name: anim-3;
 }
 
 @keyframes anim-1 {
-	0%, 8.3% { left: -100%; opacity: 0; }
-  8.3%,25% { left: 25%; opacity: 1; }
-  33.33%, 100% { left: 110%; opacity: 0; }
+  0%,
+  8.3% {
+    left: -100%;
+    opacity: 0;
+  }
+  8.3%,
+  25% {
+    left: 25%;
+    opacity: 1;
+  }
+  33.33%,
+  100% {
+    left: 110%;
+    opacity: 0;
+  }
 }
 
 @keyframes anim-2 {
-	0%, 33.33% { left: -100%; opacity: 0; }
-  41.63%, 58.29% { left: 25%; opacity: 1; }
-  66.66%, 100% { left: 110%; opacity: 0; }
+  0%,
+  33.33% {
+    left: -100%;
+    opacity: 0;
+  }
+  41.63%,
+  58.29% {
+    left: 25%;
+    opacity: 1;
+  }
+  66.66%,
+  100% {
+    left: 110%;
+    opacity: 0;
+  }
 }
 
 @keyframes anim-3 {
-	0%, 66.66% { left: -100%; opacity: 0; }
-  74.96%, 91.62% { left: 25%; opacity: 1; }
-  100% { left: 110%; opacity: 0; }
+  0%,
+  66.66% {
+    left: -100%;
+    opacity: 0;
+  }
+  74.96%,
+  91.62% {
+    left: 25%;
+    opacity: 1;
+  }
+  100% {
+    left: 110%;
+    opacity: 0;
+  }
 }
 /* .word {
   position: absolute;
@@ -308,12 +340,6 @@ color: #fff;
 
 .social-media {
   color: #fff;
-  /* margin-top: 20%;
-  margin-left: 85%; */
-  padding: 15px;
-  
-
-  
 }
 
 .media-link a {
@@ -368,11 +394,17 @@ color: #fff;
   }
 }
 /* Mobile Optimization */
-@media (max-width: 768px) {
+@media (max-width: 600px) {
   .css-waves {
-    height: 40px;
+    height: 15vh;
     min-height: 40px;
   }
+
+  /* .pic-main-face {
+    height: 25vh;
+    width: 20vw;
+  } */
+ 
 }
 
 /* *,
