--- a/style.css
+++ b/style.css
@@ -173,7 +173,7 @@ li a {
   width: 15px;
   height: 15px;
   font-size: 3rem;
-  color: #fff;
+  /* color: #fff; */
   /* background-color: #fff ; */
   /* background: #01494a; */
   /* box-shadow: 0 0 0 10px #4fc3dc44, 0 0 50px #01494a, 0 0 100px #01494a; */
