--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
 
 body {
   overflow-x: hidden;
+  
 }
 
 header {
@@ -267,10 +268,7 @@ li a {
   }
 }
 
-.social-media {
-  color: #fff;
-  margin-right: -20%;
-}
+
 
 .media-link a {
   display: flex;
@@ -283,99 +281,6 @@ li a {
 }
 
 
-@media (max-width: 768px) {
-  .bubble span{
-    width: 2px;
-  }
-  .Curriculum-vitae {
-    display: flex;
-    flex-direction: column;
-    height: 150vh;
-  }
-  .text-header {
-    font-size: 2.5rem;
-  }
-  .header-text-button {
-    left: -30%;
-    top: 35px;
-  }
-
-  .items2,
-  .items3,
-  .items4 {
-    height: 40vh;
-    width: 100%;
-  }
-  /* .items2,
-  .items3,
-  .items4  img {
-    height: 10vh;
-    width: 100%;
-  } */
-  .media-link {
-    display: flex;
-    flex-direction: column;
-    padding: 0;
-    margin: 0;
-  }
-  .social-tittle {
-    text-align: center;
-  }
-  footer {
-    top: 100px;
-    font-size: 1rem;
-  }
-
-  .main-container {
-    justify-content: space-evenly;
-    flex-wrap: wrap;
-  }
-  .container2 h1 {
-    font-size: 3rem;
-  }
-  .text {
-    width: rem;
-  }
-  .text a {
-    width: 100%;
-    display: block;
-    font-size: 0.9rem;
-  }
-
-  .main-container span {
-    width: 5rem;
-  }
-
-  .iframebox1,
-  .iframebox2,
-  .iframebox3,
-  .iframebox4,
-  .iframebox5,
-  .iframebox6 {
-    width: 20rem;
-    height: 70%;
-  }
-  .container5 {
-    width: 50%;
-    height: 90vh;
-  }
-  .item-1,
-  .item-2,
-  .item-3 {
-    font-size: 2rem;
-  }
-  .pic-main-face {
-    width: 6rem;
-    justify-content: space-between;
-    margin-left: 4%;
-  }
-  .scroll-up {
-    position: fixed;
-    right: 62%;
-    bottom: 20%;
-  }
-}
-
 .container5 {
   position: relative;
   display: flex;
@@ -385,18 +290,17 @@ li a {
   width: 100%;
   height: 90vh;
   overflow: hidden;
-
   margin-top: -80px;
 }
 .pic-main-face {
-  background: url(/asset/laptop-tablet-desktop-mobile.png);
+  background: url(/asset/headerpic3-removebg-preview.png) ;
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  width: 25rem;
-  height: 25rem;
-  margin-left: 0%;
-  opacity: 0.3;
+  width: 45rem;
+  height: 15rem;
+  margin-left: -5%;
+  opacity: 0.5;
   z-index: -1;
 }
 
@@ -439,8 +343,8 @@ li a {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  padding: 95px;
-}
+  margin-right: -3%;
+  }
 .media-link {
   bottom: 10px;
 }
@@ -550,9 +454,11 @@ iframe {
   border: 2px solid #ddd;
   padding: 5px;
   border-radius: 3px;
-  font-size: 12px;
+  font-size: 1.3rem;
   width: calc(100% / 3);
   background-color: #57619c;
+  text-transform: capitalize;
+  font-weight: 800;
 }
 .text:hover .iframe-preview {
   opacity: 1;
@@ -610,3 +516,106 @@ footer {
   margin-top: 5px;
 }
 /* footer section is ended */
+
+@media (max-width: 900px) {
+  .bubble span{
+    width: 2px;
+  }
+  .Curriculum-vitae {
+    display: flex;
+    flex-direction: column;
+    height: 128vh;
+  }
+  .text-header {
+    font-size: 2.5rem;
+  }
+  .header-text-button {
+    left: -30%;
+    top: 35px;
+  }
+
+  .items2,
+  .items3,
+  .items4 {
+    height: 40vh;
+    width: 100%;
+  }
+  /* .items2,
+  .items3,
+  .items4  img {
+    height: 10vh;
+    width: 100%;
+  } */
+  .media-link {
+    display: flex;
+    flex-direction: column;
+    padding: 0;
+    margin-right: 0;
+  }
+  .social-tittle {
+    text-align: center;
+  }
+  .social-media{
+    margin-right: -5%;
+    
+  }
+  footer {
+    top: 100px;
+    font-size: 1rem;
+  }
+
+  .main-container {
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+  }
+  .container2 h1 {
+    font-size: 3rem;
+  }
+  /* .container2 {
+    height: 100vh;
+  } */
+  .container2  {
+ height: 40vh;   
+  }
+  .text {
+    width: 15rem;
+  }
+  .text a {
+    width: 100%;
+    display: block;
+    font-size: 0.9rem;
+  }
+
+  .main-container span {
+    width: 5rem;
+  }
+
+  .iframebox1,
+  .iframebox2,
+  .iframebox3,
+  .iframebox4,
+  .iframebox5,
+  .iframebox6 {
+    width: 20rem;
+    height: 25%;
+  }
+  .container5 {
+    width: 100%;
+    height: 90vh;
+  }
+  .item-1,
+  .item-2,
+  .item-3 {
+    font-size: 2rem;
+  }
+  .pic-main-face {
+    width: 24rem;
+    justify-content: space-between;
+    margin-left: -5%;
+  }
+ 
+  .scroll-up {
+    position: fixed;
+    bottom: 20%;
+  }
+}
